# Auris

./: .gitignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md  repository.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  headphone_profile.md
.github/workflows/: build.yml  release.yml
docs/: architecture.md  phase-0-dev-guide.md  phase0-checklist.md
driver/: README.md
headphones/: README.md
models/: README.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  driver.rs  dsp.rs  eq.rs  fxsound_bridge.rs  lib.rs  main.rs  privacy.rs  profiles.rs
