[package]
name = "auris"
version = "0.1.0-alpha"
description = "Auris — Built by PrivacyChase, software that respects you."
authors = ["PrivacyChase"]
license = "AGPL-3.0"
repository = "https://github.com/thatspeedykid/Auris"
edition = "2021"
rust-version = "1.77"

[lib]
name = "auris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4.44", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
